video inicio en autoplay

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <main>
 <section id="inicio">
 <div class="container">
-<iframe class="video" src="https://www.youtube.com/embed/q6p3VCqkxgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="video" src="https://www.youtube.com/embed/q6p3VCqkxgQ?autoplay=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="autoplay" encrypted-media allowfullscreen></iframe>
 <div class="texto-documental"><p>En abril de 2022, la banda Felix y Los Sin Fritz decidió viajar a la ciudad de Mina Clavero, ubicada en la provincia de Córdoba (Argentina), con el propósito de grabar su nuevo sencillo titulado "Hipotenusa". Durante su estadía, documentaron su experiencia como grupo viajando y grabando en el Estudio Sonorámica de Mina Clavero.</p></div></div>
 </div>
 </section>
