--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Felix y Los Sin Fritz</title>
-    <link rel="stylesheet" href="style.css">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Felix y Los Sin Fritz</title>
+<link rel="stylesheet" href="style.css">
+<link href="fonts/moderat/stylesheet.css" rel="stylesheet" type="text/css">
+<link href="fonts/graphik/stylesheet.css" rel="stylesheet" type="text/css">
+<link href="fonts/avenir/stylesheet.css" rel="stylesheet" type="text/css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 <header>
@@ -13,10 +21,9 @@
 </header>
 <main>
 <section id="inicio">
-<div class="container">
 <iframe class="video" src="https://www.youtube.com/embed/q6p3VCqkxgQ?autoplay=1&mute=1&loop=1" title="YouTube video player" frameborder="0" allow="autoplay" encrypted-media allowfullscreen></iframe>
+<div class="container">
 <div class="texto-documental"><p>En abril de 2022, la banda Felix y Los Sin Fritz decidió viajar a la ciudad de Mina Clavero, ubicada en la provincia de Córdoba (Argentina), con el propósito de grabar su nuevo sencillo titulado "Hipotenusa". Durante su estadía, documentaron su experiencia como grupo viajando y grabando en el Estudio Sonorámica de Mina Clavero.</p></div></div>
-</div>
 </section>
 <div class="imagen-1">
 </div>
@@ -73,28 +80,26 @@
 <section id="shows">
 <h1>PRÓXIMOS SHOWS</h1>
 <div class="container">
-<hr>
 <div class="show">
-<h3>fecha</h2>
+<h3>fecha</h3>
 <h4>Ciudad, País<br>Evento</h4>
 <a href="#shows" class="info">INFO</a>
 <a href="#shows" class="tickets">TICKETS</a>
 </div>
 <hr>
 <div class="show">
-<h3>fecha</h2>
+<h3>fecha</h3>
 <h4>Ciudad, País<br>Evento</h4>
 <a href="#shows" class="info">INFO</a>
 <a href="#shows" class="tickets">TICKETS</a>
 </div>
 <hr>
 <div class="show">
-<h3>fecha</h2>
+<h3>fecha</h3>
 <h4>Ciudad, País<br>Evento</h4>
 <a href="#shows" class="info">INFO</a>
 <a href="#shows" class="tickets">TICKETS</a>
 </div>
-<hr>
 </div>
 </section>
 <div class="imagen-3"></div>
@@ -138,30 +143,34 @@
 <div class="fila-2"><iframe class="youtube-video" src="https://www.youtube.com/embed/b68N54qaloE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe class="youtube-video" src="https://www.youtube.com/embed/u8_4JRuIoUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe class="youtube-video" src="https://www.youtube.com/embed/zdl62fBbjmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="canal-youtube"></div><a href="https://www.youtube.com/@FelixylossinFritz/videos">MÁS VIDEOS</a></div>
+<div class="fila-2"><iframe class="youtube-video" src="https://www.youtube.com/embed/gY9qQ5w9izg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="youtube-video" src="https://www.youtube.com/embed/vEPnS857SVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="youtube-video" src="https://www.youtube.com/embed/scM1EhBuSH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<div class="canal-youtube"><a href="https://www.youtube.com/@FelixylossinFritz/videos">MÁS VIDEOS</a></div>
 </section>
 <div class="imagen-4"></div>
 <section id="discos">
 <h1>DISCOS</h1>
 <div class="fila-1">
 <div class="disco"><a target="_bkank" href="https://open.spotify.com/album/5ogZNVA39DuEbJ7SK2a8zH?si=SDJhI6-xTOaBa5uT8KdB1w"><img src="media/d1.jpeg" alt="Todo el tiempo del mundo" class="img-disco"></a>
-<h4>2011<br>TODO EL TIEMPO DEL MUNDO</h4></div>
+<h4>2011<br>Todo el tiempo del mundo</h4></div>
 <div class="disco"><a target="_bkank" href="https://open.spotify.com/album/2sdG55Mtkbmpv0Dcbs7qjh?si=nu1X7gcwRR6MVnL0jO-Y4A"><img src="media/d2.jpeg" alt="Antes de partir" class="img-disco"></a>
-<h4>2015<br>ANTES DE PARTIR</h4></div>
+<h4>2015<br>Antes de partir</h4></div>
 <div class="disco"><a target="_bkank" href="https://open.spotify.com/album/4vOxe4HEcbtsuXtF7g2KY5?si=odWB3UcrQ-6Mc7OiqnBkRw"><img src="media/d3.jpeg" alt="La decisión" class="img-disco"></a>
-<h4>2017<br>LA DECISIÓN</h4></div>
+<h4>2017<br>La Decisión</h4></div>
 <div class="disco"><a target="_bkank" href="https://open.spotify.com/album/5vJ6JRNsrsU9LCDU5Kp2js?si=zyOevDQPRxqWNDIiUn7reA"><img src="media/d4.jpeg" alt="Pullover" class="img-disco"></a>
-<h4>2019<br>PULLOVER</h4></div>
+<h4>2019<br>Pullover</h4></div>
 <div class="disco"><a target="_bkank" href="https://open.spotify.com/album/60G4Py74o1ZvSR5G90IFYJ?si=58kC4sUMT5i0M4ctYjuv4Q"><img src="media/d5.jpeg" alt="Comosinada" class="img-disco"></a>
-<h4>2021<br>EP COMOSINADA</h4></div></div>
+<h4>2021<br>EP Comosinada</h4></div></div>
 </div>
 </section>
 <section id="contacto">
 <h1>CONTACTO</h1>
+<div class="container">
 <h3>Gmail:</h3>
-<h2>felixylossinfritz@gmail.com</h2>
+<h3>felixylossinfritz@gmail.com</h3>
 <h3>Manager Victoria Bosso:</h3>
-<h2>contactovickybosso@gmail.com</h2>
+<h3>contactovickybosso@gmail.com</h3></div>
 </section>
 <div class="imagen-5"></div>
 </main>
