--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 <h1>CONTACTO</h1>
 <div class="container">
 <h3>Gmail:</h3>
-<h3>felixylossinfritz@gmail.com</h3>
+<h3 class="white">felixylossinfritz@gmail.com</h3>
 <h3>Manager Victoria Bosso:</h3>
-<h3>contactovickybosso@gmail.com</h3></div>
+<h3 class="white">contactovickybosso@gmail.com</h3></div>
 </section>
 <div class="imagen-5"></div>
 </main>
