agregado icono web e icono personal

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
-
-
+<link rel="icon" href="media/sinfritz-loco.ico">
 </head>
 <body>
 <header>
@@ -179,6 +178,7 @@
 <br><br><input type="submit" id="envio" value="ENVIAR">
 </form>
 </div>
+<div class="web-logo"><p>web: </p><a target="_blank" href="https://www.agustinmartinez.eu/"><img class="web" src="media/web-logo.png" alt="agustinmartinez.eu"></a></div>
 </section>
 <div class="imagen-5"></div>
 </main>
