correcciones 14 de abril
cambio de fuentes, ajuste de ancho y corrección logo personal

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Felix y Los Sin Fritz</title>
 <link rel="stylesheet" href="style.css">
-<link href="fonts/moderat/stylesheet.css" rel="stylesheet" type="text/css">
-<link href="fonts/graphik/stylesheet.css" rel="stylesheet" type="text/css">
 <link href="fonts/avenir/stylesheet.css" rel="stylesheet" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +25,7 @@
 <div class="imagen-1">
 </div>
 <section id="bio">
-<h1>BIO</h1>
+<h1>Bio</h1>
 <div class="container">
 <div class="bio-texto">
 <p>Fundada en 2011 por Felix Fritz, la banda marplatense tiene 5 discos en su haber, 4 de ellos editados de manera independiente. "La Decisión", su tercer trabajo, fue producido por Juan Subirá y Nano Campoliette, de Bersuit Vergarabat, en su primer trabajo como productores. En estos más diez años de trayectoria, el grupo tocó con referentes de la música sudamericana, como No Te Va Gustar, La Vela Puerca, El Cuarteto de Nos, Bersuit Vergarabat, Las Pastillas del Abuelo, Iván Noble, Kevin Johansen, Onda Vaga, Muerdo, La Mancha de rolando, Los tipitos, Estelares, Las Manos de filippi, Bersuit, entre otros. En 2019 Felix y los sin Fritz realizó su primera gira por Europa, en busca de difundir su música en formato acústico. En años anteriores han recorrido todo Argentina en más de 50 viajes.</p>
@@ -47,7 +45,7 @@
 </div>
 <div class="integrantes">
 <div class="musicos">
-<h2>INTEGRANTES</h2>
+<h2>Integrantes</h2>
 <h3>Felix Fritz</h3>
 <h4>(VOZ Y GUITARRA)</h4>
 <h3>Ignacio Santillán</h3>
@@ -64,7 +62,7 @@
 <h4>(GUITARRA ACÚSTICA)</h4>
 </div>
 <div class="colaboradores">
-<h2>STAFF</h2>
+<h2>Staff</h2>
 <h3>Victoria Bosso</h3>
 <h4>(MANAGER)</h4>
 <h3>Sebastián Arena</h3>
@@ -77,34 +75,34 @@
 </section>
 <div class="imagen-2"></div>
 <section id="shows">
-<h1>PRÓXIMOS SHOWS</h1>
+<h1>Próximos shows</h1>
 <div class="container">
-<h2>Próximamente...</h2>
+<p class="prox">Próximamente...</p>
 <div class="show">
 <h3>fecha</h3>
 <h4>Ciudad, País<br>Evento</h4>
-<a href="#shows" class="info">INFO</a>
-<a href="#shows" class="tickets">TICKETS</a>
+<a href="#shows" class="info">Info</a>
+<a href="#shows" class="tickets">Tickets</a>
 </div>
 <hr>
 <div class="show">
 <h3>fecha</h3>
 <h4>Ciudad, País<br>Evento</h4>
-<a href="#shows" class="info">INFO</a>
-<a href="#shows" class="tickets">TICKETS</a>
+<a href="#shows" class="info">Info</a>
+<a href="#shows" class="tickets">Tickets</a>
 </div>
 <hr>
 <div class="show">
 <h3>fecha</h3>
 <h4>Ciudad, País<br>Evento</h4>
-<a href="#shows" class="info">INFO</a>
-<a href="#shows" class="tickets">TICKETS</a>
+<a href="#shows" class="info">Info</a>
+<a href="#shows" class="tickets">Tickets</a>
 </div>
 </div>
 </section>
 <div class="imagen-3"></div>
 <section id="galeria">
-<h1>GALERÍA</h1>
+<h1>Galería</h1>
 <div class="fila-1">
 <div class="foto">
 <a href="media/f1.jpg" target="_blank"><img src="media/f1.jpg"></a>
@@ -135,7 +133,7 @@
 </div>
 </section>
 <section id="videoclips">
-<h1>VIDEOCLIPS</h1>
+<h1>Videoclips</h1>
 <div class="fila-1">
 <iframe class="youtube-video" src="https://www.youtube.com/embed/Se9JfRAgAHo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe class="youtube-video" src="https://www.youtube.com/embed/lO3iy6F2TZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -146,11 +144,11 @@
 <div class="fila-2"><iframe class="youtube-video" src="https://www.youtube.com/embed/gY9qQ5w9izg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe class="youtube-video" src="https://www.youtube.com/embed/vEPnS857SVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe class="youtube-video" src="https://www.youtube.com/embed/scM1EhBuSH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-<div class="canal-youtube"><a href="https://www.youtube.com/@FelixylossinFritz/videos">MÁS VIDEOS</a></div>
+<div class="canal-youtube"><a href="https://www.youtube.com/@FelixylossinFritz/videos">Más videos</a></div>
 </section>
 <div class="imagen-4"></div>
 <section id="discos">
-<h1>DISCOS</h1>
+<h1>Discos</h1>
 <div class="fila-1">
 <div class="disco"><a target="_bkank" href="https://open.spotify.com/album/5ogZNVA39DuEbJ7SK2a8zH?si=SDJhI6-xTOaBa5uT8KdB1w"><img src="media/d1.jpeg" alt="Todo el tiempo del mundo" class="img-disco"></a>
 <h4>2011<br>Todo el tiempo del mundo</h4></div>
@@ -165,7 +163,7 @@
 </div>
 </section>
 <section id="contacto">
-<h1>CONTACTO</h1>
+<h1>Contacto</h1>
 <div class="container">
 <h3>Completa el formulario y en breve nos pondremos en contacto.</h3>
 <br>
@@ -175,7 +173,7 @@
 <br><br><label for="mail">Email: </label><br><br><input type="email" id="mail" name="mail" placeholder="Email" required>
 <br><br><label for="telefono">Teléfono: </label><br><br><input type="tel" id="telefono" name="telefono" placeholder="Número" required>
 <br><br><label for="msj">Mensaje: </label><br><br><textarea placeholder="Escribe tu mensaje" rows="10" id="msj" name="msj" required></textarea>
-<br><br><input type="submit" id="envio" value="ENVIAR">
+<br><br><input type="submit" id="envio" value="Enviar">
 </form>
 </div>
 <div class="web-logo"><p>web: </p><a target="_blank" href="https://www.agustinmartinez.eu/"><img class="web" src="media/web-logo.png" alt="agustinmartinez.eu"></a></div>
