actualización email vicky

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Felix y Los Sin Fritz</title>
 <link rel="stylesheet" href="style.css">
-<link href="fonts/avenir/stylesheet.css" rel="stylesheet" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
@@ -168,7 +167,7 @@
 <h3>Completa el formulario y en breve nos pondremos en contacto.</h3>
 <br>
 <form id="formulario" action="https://formsubmit.co/agustinmartinez1022@gmail.com" method="POST">
-<input type="hidden" name="_cc" value="felixylossinfritz@gmail.com,contactovickybosso@gmail.com">
+<input type="hidden" name="_cc" value="felixylossinfritz@gmail.com,bossovicky@gmail.com">
 <label for="nombre">Nombre y apellido: </label><br><br><input type="text" id="name" name="nombre" placeholder="Nombre y apellido" required>
 <br><br><label for="mail">Email: </label><br><br><input type="email" id="mail" name="mail" placeholder="Email" required>
 <br><br><label for="telefono">Teléfono: </label><br><br><input type="tel" id="telefono" name="telefono" placeholder="Número" required>
