--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="colaboradores">
 <h2>Staff</h2>
 <h3>Victoria Bosso</h3>
-<h4>(MANAGER)</h4>
+<h4>(MÁNAGER)</h4>
 <h3>Sebastián Arena</h3>
 <h4>(OPERADOR TÉCNICO)</h4>
 <h3>Juan Bronzini</h3>
