google search tool

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Felix y Los Sin Fritz</title>
+<meta name="description" content="Banda marplatense que se formó a mediados de 2011. El grupo está formado por Felix Fritz, Ignacio Santillán, Juan Costantino, Fernando Arriaga, Francisco Tropea, Federico Macchi y Pablo Martinez.">
+<meta name="robots"  content="index">
+<meta name="keywords" content="Felix y los Sin Fritz, Sin Fritz, Mar del Plata, Banda de rock marplatense, Banda de música marplatense">
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +16,7 @@
 </head>
 <body>
 <header>
-<a href=""><img id="logo" src="media/sinfritz-loco.png" alt="Felix y Los Sin Fritz"></a>
+<a href=""><img id="logo" src="media/sinfritz-loco.png" alt="Felix y Los Sin Fritz Logo"></a>
 </header>
 <main>
 <section id="inicio">
