--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Felix y Los Sin Fritz</title>
 <meta name="description" content="Banda marplatense que se formó a mediados de 2011. El grupo está formado por Felix Fritz, Ignacio Santillán, Juan Costantino, Fernando Arriaga, Francisco Tropea, Federico Macchi y Pablo Martinez.">
-<meta name="robots"  content="index">
+<meta name="robots" content="all">
+<meta name="googlebot" content="all">
+<meta name="googlebot-news" content="all">
 <meta name="keywords" content="Felix y los Sin Fritz, Sin Fritz, Mar del Plata, Banda de rock marplatense, Banda de música marplatense">
+<link rel="canonical" href="https://felixylossinfritz.netlify.app">
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
