--- a/index.html
+++ b/index.html
@@ -84,25 +84,15 @@
 <div class="container">
 <p class="prox">Próximamente...</p>
 <div class="show">
-<h3>fecha</h3>
-<h4>Ciudad, País<br>Evento</h4>
-<a href="#shows" class="info">Info</a>
-<a href="#shows" class="tickets">Tickets</a>
+<h3>domingo 4 de junio</h3>
+<h4>Las Lagunas de Mijas, España<br>Parripollo La granja</h4>
 </div>
 <hr>
 <div class="show">
-<h3>fecha</h3>
-<h4>Ciudad, País<br>Evento</h4>
-<a href="#shows" class="info">Info</a>
-<a href="#shows" class="tickets">Tickets</a>
+<h3>domingo 9 de julio</h3>
+<h4>Fuengirola, España<br>Recinto Ferial</h4>
 </div>
 <hr>
-<div class="show">
-<h3>fecha</h3>
-<h4>Ciudad, País<br>Evento</h4>
-<a href="#shows" class="info">Info</a>
-<a href="#shows" class="tickets">Tickets</a>
-</div>
 </div>
 </section>
 <div class="imagen-3"></div>
